k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitalsync-backend-svc
spec:
  type: ClusterIP
  selector:
    app: vitalsync-backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
